--- a/mainpage.html
+++ b/mainpage.html
@@ -46,7 +46,7 @@
 
         </div>
         <div id="mobile-menu">
-            <img src="Icon.png" class="menu-mob">
+            <img src="Lines.png" class="menu-mob">
         </div>
         <div id="banner">
             <div class="banner-top">
@@ -54,7 +54,7 @@
             </div>
             <div class="banner-down">
                 <b>www.BlazRobar.com</b>
-                <img src="right.png" class="right-banner">
+                <img src="arrow_right.png" class="right-banner">
             </div>
         </div>
         <div class="text-box" id="tb-left">
@@ -64,12 +64,12 @@
         </div>
         <div class="text-box" id="tb-right">
             <div class="tbr-text">
-                <img src="right.png" class="right-tb">
+                <img src="arrow_right.png" class="right-tb">
             </div>
         </div>
         <div id="img-line">
             <div class="line-text">
-                <img src="right.png" class="right-tb">
+                <img src="arrow_right.png" class="right-tb">
             </div>
         </div>
         <img src="2.png" id="img2">
